Добавил 2 новых блока Features и Works.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/9482a37923.js" crossorigin="anonymous"></script>
         <title>ActiveBox</title>
 
     </head>
@@ -51,6 +52,168 @@
 
                 </div>
             </div>
+        </div>
+
+        <!-- FEATURES -->
+
+        <div class="container">
+            <div class="features">
+
+                <div class="features__item">
+
+                    <i class="icon fa-solid fa-pen-ruler"></i>
+
+                    <h4 class="features__title">Easily Customised</h4>
+
+                    <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</div>
+
+                </div>
+
+                <div class="features__item">
+
+                    <i class="icon fa-solid fa-display"></i>
+
+                    <h4 class="features__title">Responsive Ready</h4>
+
+                    <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</div>
+
+                </div>
+
+                <div class="features__item">
+
+                    <i class="icon fa-solid fa-lightbulb"></i>
+
+                    <h4 class="features__title">Modern Design</h4>
+
+                    <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</div>
+
+                </div>
+
+                <div class="features__item">
+
+                    <i class="icon fa-solid fa-atom"></i>
+
+                    <h4 class="features__title">Clean Code</h4>
+
+                    <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</div>
+
+                </div>
+
+                <div class="features__item">
+
+                    <i class="icon fa-solid fa-briefcase"></i>
+
+                    <h4 class="features__title">Ready to Ship</h4>
+
+                    <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</div>
+
+                </div>
+
+                <div class="features__item">
+
+                    <i class="icon fa-solid fa-cloud-arrow-down"></i>
+
+                    <h4 class="features__title">Download for Free</h4>
+
+                    <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</div>
+
+                </div>
+
+            </div>
+        </div>
+
+        <!-- WORKS -->
+
+        <div class="works">
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-1.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-2.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-3.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-4.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-5.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-6.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-7.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
+            <div class="works__item">
+
+                <img class="works__img" src="img/work/work-8.jpg" alt="">
+
+                <div class="works__content">
+                    <div class="works__title">Project Name</div>
+                    <div class="works__text">Website Design</div>
+                </div>
+
+            </div>
+
         </div>
 
     </body>
