--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/9482a37923.js" crossorigin="anonymous"></script>
         <title>ActiveBox</title>
 
@@ -404,6 +404,92 @@
 
             </div>
         </div>
+
+        <!-- DOWNLOAD -->
+
+        <div class="download">
+            <div class="conatainer">
+
+                <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+
+                <div class="download__text">
+                    <p>Fusce dapibus, tellus ac cursus commodo</p>
+                </div>
+
+                <a class="btn btn--red" href="#">Download for Free</a>
+
+            </div>
+        </div>
+
+        <!-- FOOTER -->
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__inner">
+
+                    <div class="footer__block">
+
+                        <h4 class="footer__title">Location</h4>
+
+                        <address class="footer__address">
+                            <div>3481 Melrose Place</div>
+                            <div>Beverly Hills, CA 90210</div>
+                        </address>
+
+                    </div>
+
+                    <div class="footer__block">
+
+                        <h4 class="footer__title">Share with Love</h4>
+
+                        <div class="social social--footer">
+
+                            <a class="social__item" href="#" target="_blank">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+
+                            <a class="social__item" href="#" target="_blank">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+
+                            <a class="social__item" href="#" target="_blank">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+
+                            <a class="social__item" href="#" target="_blank">
+                                <i class="fa-brands fa-google-plus-g"></i>
+                            </a>
+
+                        </div>
+
+                    </div>
+
+                    <div class="footer__block">
+
+                        <h4 class="footer__title">About ActiveBox</h4>
+
+                       <div class="footer__text">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                       </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="copyright">
+                <div class="container">
+
+                    <div class="copyright__text">
+                        <div>Copyright © 2015 ActiveBox. All Rights Reserved</div>
+                        <div>Made with <i class="copyright__icon fa-solid fa-heart"></i> by <span> Kamal Chaneman</span></div>
+                    </div>
+
+                </div>
+            </div>
+
+        </footer>
 
     </body>
 
