Адаптировал первую страницу и добавил бургер меню.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/9482a37923.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ActiveBox</title>
 
     </head>
@@ -31,6 +32,10 @@
                         <a class="nav__link" href="#">Testimonials</a>
                         <a class="nav__link" href="#">Dowload</a>
                     </nav>
+
+                    <button class="burger" type="button">
+                        <span class="burger__item">Menu</span>
+                    </button>
 
                 </div>
             </div>
@@ -482,7 +487,7 @@
                 <div class="container">
 
                     <div class="copyright__text">
-                        <div>Copyright © 2015 ActiveBox. All Rights Reserved</div>
+                        <div>Copyright © 2022 ActiveBox. All Rights Reserved</div>
                         <div>Made with <i class="copyright__icon fa-solid fa-heart"></i> by <span> Kamal Chaneman</span></div>
                     </div>
 
