--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
     <head>
 
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <script src="https://kit.fontawesome.com/9482a37923.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        
+
+        <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="img/favicon/site.webmanifest">
+        <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+
+
+
+        <meta name="description" content="Описание страницы">
+        <meta name="keywords" content="Описание страницы">  //Для яндекса
+        <meta name="google" content="notranslate">
+
         <title>ActiveBox</title>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     </head>
 
@@ -17,7 +37,7 @@
         
         <!-- HEADER -->
 
-        <header class="header">
+        <header class="header" id="header">
             <div class="container">
                 <div class="header__inner">
 
@@ -25,15 +45,15 @@
                         <img src="img/logo/logo.png" alt="">
                     </div>
 
-                    <nav class="nav">
-                        <a class="nav__link" href="#">Features</a>
-                        <a class="nav__link" href="#">Works</a>
-                        <a class="nav__link" href="#">Our Team</a>
-                        <a class="nav__link" href="#">Testimonials</a>
-                        <a class="nav__link" href="#">Dowload</a>
+                    <nav class="nav" id="nav">
+                        <a class="nav__link" href="#" data-scroll="#features">Features</a>
+                        <a class="nav__link" href="#" data-scroll="#works">Works</a>
+                        <a class="nav__link" href="#" data-scroll="#team">Our Team</a>
+                        <a class="nav__link" href="#" data-scroll="#reviews">Testimonials</a>
+                        <a class="nav__link" href="#" data-scroll="#dowload">Dowload</a>
                     </nav>
 
-                    <button class="burger" type="button">
+                    <button class="burger" type="button" id="navToggle">
                         <span class="burger__item">Menu</span>
                     </button>
 
@@ -43,7 +63,7 @@
 
         <!-- INTRO -->
 
-        <div class="intro">
+        <div class="intro" id="intro">
             <div class="container">
                 <div class="intro__inner">
 
@@ -61,7 +81,7 @@
 
         <!-- FEATURES -->
 
-        <div class="container">
+        <div class="container" id="features">
             <div class="features">
 
                 <div class="features__item">
@@ -129,7 +149,7 @@
 
         <!-- WORKS -->
 
-        <div class="works">
+        <div class="works" id="works">
 
             <div class="works__item">
 
@@ -223,7 +243,7 @@
 
         <!-- TEAM -->
 
-        <div class="team">
+        <div class="team" id="team">
             <div class="container">
                 <div class="team__inner">
 
@@ -387,21 +407,46 @@
 
         <!-- REVIEWS -->
 
-        <div class="reviews">
+        <div class="reviews" id="reviews">
             <div class="container">
 
-                <div class="reviews__item">
+                <div class="reviews__slider" id="reviewsSlider">
 
-                    <div class="reviews__photo">
-                        <img class="reviews__img" src="img/reviews/testimonial-1.jpg" alt="">
+                    <div class="slick-item">
+                        <div class="reviews__item">
+
+                            <div class="reviews__photo">
+                                <img class="reviews__img" src="img/reviews/testimonial-1.jpg" alt="">
+                            </div>
+
+                            <div class="reviews__content">
+                                <div class="reviews__text">
+                                    "Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."
+                                </div>
+                                <div class="reviews__author">
+                                    Susan Sims, Interaction Designer at XYZ
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
 
-                    <div class="reviews__content">
-                        <div class="reviews__text">
-                            "Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."
-                        </div>
-                        <div class="reviews__author">
-                            Susan Sims, Interaction Designer at XYZ
+                    <div class="slick-item">
+                        <div class="reviews__item">
+
+                            <div class="reviews__photo">
+                                <img class="reviews__img img" src="img/reviews/testimonial-2.jpg" alt="">
+                            </div>
+
+                            <div class="reviews__content">
+                                <div class="reviews__text">
+                                    "Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur...."
+                                </div>
+                                <div class="reviews__author">
+                                    Susan Sims, Interaction Designer at XYZ
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -412,7 +457,7 @@
 
         <!-- DOWNLOAD -->
 
-        <div class="download">
+        <div class="download" id="dowload">
             <div class="conatainer">
 
                 <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
@@ -495,6 +540,11 @@
             </div>
 
         </footer>
+
+        <!-- JAVASCRIPT -->
+
+        <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script src="app.js"></script>
 
     </body>
 
